# festlist

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  requirements.txt  start_server.py  test_rate_limiting.py
backend/app/: main.py
backend/app/api/: __init__.py  endpoints.py  users.py
backend/app/middleware/: __init__.py  rate_limit.py
backend/app/models/: __init__.py  schemas.py  user.py
backend/app/services/: __init__.py  artist_extraction_service.py  firebase_service.py  gemini_service.py  ocr_service.py  spotify_service.py
backend/app/utils/: __init__.py  file_utils.py  middleware.py
backend/tests/: test_api.py
frontend/: .env.example  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/: ArtistReview.tsx  AuthStatus.tsx  FileUpload.tsx  MusicServiceAuth.tsx  OCRResults.tsx  PlaylistCreation.tsx  PlaylistCreationDebug.tsx  ServiceIcons.tsx  SpotifyAuth.tsx
frontend/src/services/: api.ts  auth.ts
frontend/src/utils/: errorHandling.ts
services/spotify/: app.py
